<resources>
    <string name="app_name">Kot4Talk</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Email">Почта</string>
    <string name="Password">Пароль</string>
    <string name="Register">Зарегестрироваться</string>
    <string name="HaveAcc">У меня уже есть аккаунт</string>
    <string name="Login">Войти</string>
</resources>